# nekogui

./: .gitignore  .gitmodules  CMakeLists.txt
example/: main.cpp
example-src/: drawing.cpp  example.cpp  input.cpp
gui-mate/: containor.hpp  element.hpp  root.cpp  root.hpp  window.hpp
gui-mate/base/: box_window.hpp  button.hpp  containor.hpp  element.hpp  real_window.hpp  text_box.hpp
gui-mate/nekohook/: chrono.hpp  drawing.hpp  functional.hpp  input.cpp  input.hpp
include/neko/gui/: acting_window.hpp  base_window.hpp  box_window.hpp  button.hpp  checkbox.hpp  containor.hpp  element.hpp  real_window.hpp  text_box.hpp  titlebar.hpp
include/neko/gui/draw/: api.hpp  buffer.hpp  draw.hpp  font.hpp  primitives.hpp  vec.hpp
include/neko/gui/input/: api.hpp  input.hpp
src/: acting_window.cpp  button.cpp  checkbox.cpp  containor.cpp  element.cpp  real_window.cpp  titlebar.cpp
src/draw/: api.cpp  draw.cpp  draw.hpp  font.cpp  primitives.cpp
src/input/: input.cpp
